Create hero section structure

--- a/index.html
+++ b/index.html
@@ -16,6 +16,43 @@
     </title>
   </head>
   <body>
-    
+    <div class="home">
+      <!-- START HEADER -->
+      <header class="header">
+        <nav class="nav">
+          <a href="/">
+            <img src="images/logo.svg" alt="Huddle logo" class="logo" />
+          </a>
+          <a href="#" class="nav-link">Try It Free</a>
+        </nav>
+      </header>
+      <!-- END HEADER -->
+
+      <!-- START HERO SECTION -->
+      <section class="hero-section">
+        <div class="hero grid">
+          <div class="hero-text-box">
+            <h1 class="heading-primary">
+              Build The Community <br />
+              Your Fans Will Love
+            </h1>
+            <p class="hero-description">
+              Huddle re-imagines the way we build communities. You have a voice,
+              but so does your audience. Create connections with your users as
+              you engage in genuine discussion.
+            </p>
+            <a href="#" class="btn">Get Started For Free</a>
+          </div>
+          <div class="hero-img-box">
+            <img
+              src="images/illustration-mockups.svg"
+              class="hero-img"
+              alt="illustration"
+            />
+          </div>
+        </div>
+      </section>
+      <!-- END HERO SECTION -->
+    </div>
   </body>
 </html>
