Create features section structure

--- a/index.html
+++ b/index.html
@@ -54,5 +54,73 @@
       </section>
       <!-- END HERO SECTION -->
     </div>
+
+    <main>
+      <!-- START FEATURES SECTION -->
+      <section class="features-section">
+        <div class="feature-box grid grid--2-cols">
+            <div class="feature-text">
+              <h2>Grow Together</h2>
+              <p>
+                Generate meaningful discussions with your audience and build a
+                strong, loyal community. Think of the insightful conversations
+                you miss out on with a feedback form.
+              </p>
+            </div>
+            <div class="feature-img-box">
+              <img
+                src="images/illustration-grow-together.svg"
+                alt="illustration of the feature"
+                class="feature-img"
+              />
+            </div>
+
+          </div>
+        </div>
+
+        <div class="feature-box grid grid--2-cols">
+            <div class="feature-img-box">
+              <img
+                src="images/illustration-flowing-conversation.svg"
+                alt="illustration of the feature"
+                class="feature-img"
+              />
+            </div>
+            <div class="feature-text">
+              <h2>Flowing Conversations</h2>
+              <p>
+                You wouldn't paginate a conversation in real life, so why do it
+                online? Our threads have just-in-time loading for a more natural
+                flow.
+              </p>
+            </div>
+        </div>
+
+        <div class="feature-box grid grid--2-cols">
+            <div class="feature-text">
+              <h2>Your Users</h2>
+              <p>
+                It takes no time at all to integrate Huddle with your app's
+                authentication solution. This means, once signed in to your app,
+                your users can start chatting immediately.
+              </p>
+            </div>
+            <div class="feature-img-box">
+              <img
+              src="images/illustration-your-users.svg"
+              alt="illustration of the feature"
+              class="feature-img"
+            />
+            </div>
+        </div>
+
+        <div class="cta-box">
+          <h2>Ready To Build Your Community?</h2>
+          <a href="#" class="btn">Get Started For Free</a>
+        </div>
+
+      </section>
+      <!-- END FEATURES SECTION -->
+    </main>
   </body>
 </html>
