Make html landmarks unique for screen readers

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="home">
       <!-- START HEADER -->
       <header class="header">
-        <nav class="nav">
+        <nav class="nav" aria-label="main">
           <a href="/">
             <img src="images/logo.svg" alt="Huddle logo" class="logo" />
           </a>
@@ -152,7 +152,7 @@
         </address>
       </div>
 
-      <nav class="nav-col">
+      <nav class="nav-col" aria-label="footer links one">
         <ul class="footer-nav">
           <li><a class="footer-link" href="#">About Us</a></li>
           <li><a class="footer-link" href="#">What We Do</a></li>
@@ -160,7 +160,7 @@
         </ul>
       </nav>
 
-      <nav class="nav-col">
+      <nav class="nav-col" aria-label="footer links two">
         <ul class="footer-nav">
           <li><a class="footer-link" href="#">Career</a></li>
           <li><a class="footer-link" href="#">Blog</a></li>
