Add alt text to images

--- a/index.html
+++ b/index.html
@@ -135,19 +135,19 @@
     <footer class="footer grid grid--4-cols">
       <div class="address-col">
         <a href="#" class="footer-link">
-          <img src="images/logo-white.svg" alt="" class="footer-logo" />
+          <img src="images/logo-white.svg" alt="huddle logo" class="footer-logo" />
         </a>
         <address class="contacts">
           <p class="location">
-            <img src="images/icon-location.svg" class="icon" alt="" />Lorem ipsum dolor sit
+            <img src="images/icon-location.svg" class="icon" alt="location icon" />Lorem ipsum dolor sit
             amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
             ut labore et dolore magna aliqua
           </p>
           <a class="footer-link" href="tel:+1-543-123-4567">
-            <img src="images/icon-phone.svg" class="icon" alt="" />+1-543-123-4567</a
+            <img src="images/icon-phone.svg" class="icon" alt="phone icon" />+1-543-123-4567</a
           >
           <a class="footer-link" href="mailto:example@huddle.com">
-            <img src="images/icon-email.svg" class="icon" alt="" /> example@huddle.com</a
+            <img src="images/icon-email.svg" class="icon" alt="email icon" /> example@huddle.com</a
           >
         </address>
       </div>
